fix: use relative path for fonts, new align for social links

--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
 @font-face {
   font-family: Lato;
-  src: url(/assets/fonts/Lato-Black.ttf);
+  src: url(./assets/fonts/Lato-Black.ttf);
   font-weight: 900;
 }
 
 @font-face {
   font-family: Lato;
-  src: url(/assets/fonts/Lato-Bold.ttf);
+  src: url(./assets/fonts/Lato-Bold.ttf);
   font-weight: 700;
 }
 
 @font-face {
   font-family: Lato;
-  src: url(/assets/fonts/Lato-Regular.ttf);
+  src: url(./assets/fonts/Lato-Regular.ttf);
   font-weight: 400;
 }
 
 @font-face {
   font-family: Lato;
-  src: url(/assets/fonts/Lato-Light.ttf);
+  src: url(./assets/fonts/Lato-Light.ttf);
   font-weight: 300;
 }
 
@@ -275,6 +275,10 @@ h2 {
   border-radius: 50%;
   border: 2px solid #666d89;
   margin-left: 8px;
+}
+
+.foot-menu-item-icon {
+  display: flex;
 }
 
 .foot-menu-item:hover {
